really actually acutally have a user and a vote, vaguely connected

--- a/app/views/votes/_form.html.erb
+++ b/app/views/votes/_form.html.erb
@@ -15,6 +15,10 @@
     <%= f.label :question %><br>
     <%= f.text_field :question %>
   </div>
+  <div class="field">
+    <%= f.label :user_id %><br>
+    <%= f.number_field :user_id %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
