--- a/app/views/votes/index.html.erb
+++ b/app/views/votes/index.html.erb
@@ -4,6 +4,7 @@
   <thead>
     <tr>
       <th>Question</th>
+      <th>User</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -12,6 +13,7 @@
     <% @votes.each do |vote| %>
       <tr>
         <td><%= vote.question %></td>
+        <td><%= vote.user_id %></td>
         <td><%= link_to 'Show', vote %></td>
         <td><%= link_to 'Edit', edit_vote_path(vote) %></td>
         <td><%= link_to 'Destroy', vote, method: :delete, data: { confirm: 'Are you sure?' } %></td>
