--- a/app/views/votes/show.html.erb
+++ b/app/views/votes/show.html.erb
@@ -5,5 +5,10 @@
   <%= @vote.question %>
 </p>
 
+<p>
+  <strong>User:</strong>
+  <%= @vote.user_id %>
+</p>
+
 <%= link_to 'Edit', edit_vote_path(@vote) %> |
 <%= link_to 'Back', votes_path %>
